src/main/resources/kubernetes/ingress-spring-micro-actuator.yaml
# used for manual deployments
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-micro-actuator
  #namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx

    # allows http without forcing redirect to ssl
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

    # remove prefix
    nginx.ingress.kubernetes.io/rewrite-target: /actuator/$2

spec:
  tls:
  - hosts: [ 'k3s.local' ]
    # secret must be in same namespace
    secretName: tls-credential
  rules:

  # did not necessarily need to change /actuator to /metrics
  # but if we had multiple REST services, then being able to differentiate would be required
  - host: k3s.local
    http:
      paths:
      - pathType: Prefix
        path: "//metrics(/|$)(.*)"
        backend:
          service:
            name: spring-micro-with-actuator
            port:
              number: 8081
